# authenticated-streamlit

auth0/app/: pyproject.toml
auth0/frontend/: package-lock.json  package.json
auth0/server/: pyproject.toml
